[package]
name = "advent-23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
itertools = "0.12.0"
regex = "1.10.2"
roots = "0.0.8"
winnow = "0.5.26"

[[bench]]
name = "day_04"
harness = false

[[bench]]
name = "day_05"
harness = false

[[bench]]
name = "day_06"
harness = false

[[bench]]
name = "day_07"
harness = false